--- a/movie_review_app/projects/templates/projects/project_index.html
+++ b/movie_review_app/projects/templates/projects/project_index.html
@@ -3,7 +3,7 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-<h1>Projects</h1>
+<h1>Movies List</h1>
 <div class="row">
 {% for project in projects %}
     <div class="col-md-4">
