--- a/movie_review_app/projects/templates/projects/project_detail.html
+++ b/movie_review_app/projects/templates/projects/project_detail.html
@@ -5,12 +5,23 @@
 {% block page_content %}
 <h1>{{ project.title }}</h1>
 <div class="row">
+    <div class="col-md-8">
+        {% if project.image %}
+            <img src="{{ project.image.url }}" width="100%">
+        {% endif %}
+    </div>
     <div class="col-md-4">
-        <h5>About the project:</h5>
+        <h5>About the movie:</h5>
         <p>{{ project.description }}</p>
         <br>
         <h5>Technology used:</h5>
         <p>{{ project.technology }}</p>
+        <br>
+        <h5>Movie Rating:</h5>
+        <p>{{ project.rating }}</p>
+        <br>
+        <h5>Movie Type:</h5>
+        <p>{{ project.movie_type }}</p>
     </div>
 </div>
 {% endblock page_content %}
