--- a/movie_review_app/pages/templates/pages/home.html
+++ b/movie_review_app/pages/templates/pages/home.html
@@ -1,8 +1,8 @@
 <!-- pages/templates/pages/home.html -->
-
+<h1>Welcome to the Movie App!</h1>
 {% extends "base.html" %}
 
 {% block page_content %}
     
-    <h1>Welcome to the Movie App!</h1>
+<!-- <h1>Welcome to the Movie App!</h1> -->
 {% endblock page_content %}
