--- a/movie_review_app/projects/templates/projects/project_index.html
+++ b/movie_review_app/projects/templates/projects/project_index.html
@@ -3,6 +3,14 @@
 {% extends "base.html" %}
 
 {% block page_content %}
+{% if user.is_authenticated %}
+    <h2>Hello, {{ user.username|default:'Guest' }}!</h2>
+    <h2>Welcome to the Movie review App</h2>
+    {% else %}
+    <h2>Hello, {{ user.username|default:'Guest' }}!</h2>
+    <p>You are not logged in</p>
+    <a href="{% url 'login' %}">Log In</a>
+    {% endif %}
 <h1>Movies List</h1>
 <div class="row">
 {% for project in projects %}
@@ -21,6 +29,12 @@
             </div>
         </div>
     </div>
-    {% endfor %}
+{% endfor %}
 </div>
-{% endblock %}
+<div><form action="{% url 'logout' %}" method="post">
+    {% csrf_token %}
+     <button type="submit" class="btn btn-danger">Log Out</button>
+     <a href="{% url 'password_change' %}">Change password</a>
+</form>
+</div>
+{% endblock page_content%}
