--- a/movie_review_app/users/templates/registration/login.html
+++ b/movie_review_app/users/templates/registration/login.html
@@ -11,6 +11,7 @@
     <input type="submit" value="Login">
 </form>
 
-<a href="{% url 'dashboard' %}">Back to dashboard</a>
-<a href="{% url 'password_reset' %}">Reset password</a>
+<a href="{% url 'dashboard' %}">Back to dashboard</a> |
+<a href="{% url 'password_reset' %}">Reset password</a> |
+<a href="{% url 'register' %}">Register</a>
 {% endblock page_content %}
